--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 [dependencies]
 linked-hash-map = "0"
 clap = { version = "4.0", features = ["derive"] }
+csv = "1.3.0"
+anyhow = "1.0.86"
+itertools = "0.13.0"
 
